# DocMakerH

./: DocMakerH.cabal  README.md  cases.docx  cases.html  cases.md
app/: Main.hs  TestCasesEx.hs
src/: Quoter.hs
src/Quoter/: ParseHelpers.hs  PrettyPrinters.hs  Types.hs  Utils.hs
